# mlflow-prefect-jupyter-docker-compose

./: .env_template  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  start.sh
config/agent/: Dockerfile
config/jupyter/: Dockerfile  pyproject.toml
config/mlflow/: Dockerfile
config/postgresql/: init2.sql
example/: aircraft-db.sqlite  prefect_tutorial.ipynb
example/prefect_tutorials/: 06_parallel_execution.py  defs.py
example/prefect_tutorials/aircraftlib/data/opensky/: capture-KF2TYMrYjOE=.json
example/random_error/: random_error.py
example/wb_tutorials/: register.py
hasura/: Dockerfile
jupyter/: Dockerfile  config.toml
notebook/: aircraft-db.sqlite  prefect_tutorial.ipynb  tutorial.ipynb
postgresql/: init1.sql
src/: README.md  random_error.py  random_erros.py
test/: test_mlflow.py
